logs/ckanext-dcat.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ckanext'...
Listing './lib/python3.5/site-packages/ckanext/dcat'...
Compiling './lib/python3.5/site-packages/ckanext/dcat/commands.py'...
***   File "./lib/python3.5/site-packages/ckanext/dcat/commands.py", line 56
    except p.toolkit.ValidationError, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ckanext/dcat/controllers.py'...
***   File "./lib/python3.5/site-packages/ckanext/dcat/controllers.py", line 45
    except toolkit.ValidationError, e:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext/dcat/harvesters'...
Compiling './lib/python3.5/site-packages/ckanext/dcat/harvesters/base.py'...
***   File "./lib/python3.5/site-packages/ckanext/dcat/harvesters/base.py", line 94
    except requests.exceptions.HTTPError, error:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ckanext/dcat/harvesters/rdf.py'...
***   File "./lib/python3.5/site-packages/ckanext/dcat/harvesters/rdf.py", line 202
    except RDFParserException, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext/dcat/i18n'...
Listing './lib/python3.5/site-packages/ckanext/dcat/i18n/ca'...
Listing './lib/python3.5/site-packages/ckanext/dcat/i18n/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/ckanext/dcat/i18n/es'...
Listing './lib/python3.5/site-packages/ckanext/dcat/i18n/es/LC_MESSAGES'...
Compiling './lib/python3.5/site-packages/ckanext/dcat/processors.py'...
***   File "./lib/python3.5/site-packages/ckanext/dcat/processors.py", line 154
    rdflib.plugin.PluginException, TypeError), e:
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext/dcat/tests'...
Compiling './lib/python3.5/site-packages/ckanext/dcat/tests/test_harvester.py'...
***   File "./lib/python3.5/site-packages/ckanext/dcat/tests/test_harvester.py", line 455
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ckanext_dcat-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
